# rob-back-end

./: .gitignore  Cargo.toml  README.adoc  static
db/: 01-init.sql  02-data.sql  Dockerfile
debian/: env.conf  rob-back-end.service
scripts/: db.sh
src/: main.rs
src/models/: group.rs  job.rs  mod.rs  test.rs  user.rs
src/routes/: auth_routes.rs  group_routes.rs  job_routes.rs  mod.rs  test_routes.rs  user_routes.rs
