[package]
name = "rob-back-end"
version = "0.1.0"
authors = ["Ryan Tolboom <rxt1077@njit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
serde = "1.0.117"
sqlx = { version = "0.4.1", features = [ "postgres", "runtime-actix-native-tls", "chrono" ] }
anyhow = "1.0.34"
oauth2 = "3.0.0"
dotenv = "0.15.0"
actix-session = "0.4.0"
actix-files = "0.4.0"
openssl = "0.10.30"
chrono = { version = "0.4.19", features = [ "serde" ] }
log = "0.4.11"
env_logger = "0.8.2"
